fix: 40957:New UI : Line in top of sidebar should be aligned with beside line , see att

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -32,3 +32,11 @@
     color: $gold;
   }
 }
+
+#top-header {
+  height: 40px;
+}
+
+#user-info {
+  height: 64px;
+}
